--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <load src="./html/base/head.html" title="home"/>
 
-
-  <body>
-    <a href="./about.html">miau</a>                 
+  <body data-theme="light" class="body">    
+    <div class="overlay" data-burger="overlay"></div>
+    <load src="./html/components/header.html"/>
+    
+    
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
