added hiro and overwiev

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <body data-theme="light" class="body">    
     <div class="overlay" data-burger="overlay"></div>
     <load src="./html/components/header.html"/>
-    
+    <load src="./html/components/home/hero.html"/>
+    <load src="./html/components/home/overview.html"/>
     
     <script type="module" src="./js/main.js"></script>
   </body>
