added stregth,companies,overview section

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,12 @@
 
   <body data-theme="light" class="body">    
     <div class="overlay" data-burger="overlay"></div>
-    <load src="./html/components/header.html"/>
+    <load src="./html/components/home/header.html"/>
     <load src="./html/components/home/hero.html"/>
     <load src="./html/components/home/overview.html"/>
+    <load src="./html/components/home/passion.html"/>
+    <load src="./html/components/home/strength.html"/>
+    <load src="./html/components/home/companies.html"/>
     
     <script type="module" src="./js/main.js"></script>
   </body>
