--- a/src/contact.html
+++ b/src/contact.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <load src="./html/base/head.html" title="pricing"/>
+  <load src="./html/base/head.html" title="contact"/>
 
   <body data-theme="light" class="body">    
     <div class="overlay" data-burger="overlay"></div>
     <load src="./html/base/header.html"/>
-    <load src="./html/components/pricing/hero.html"/>
-    <load src="./html/components/pricing/faq.html"/>
-    
-
+    <load src="./html/components/contact/map.html"/>
+    <load src="./html/components/home/companies.html"/>
     <load src="./html/base/footer.html"/>
     
-    <script type="module" src="./js/pricing.js"></script>
+    <script type="module" src="./js/contact.js"></script>
   </body>
 </html>
