--- a/src/html/base/header.html
+++ b/src/html/base/header.html
@@ -44,7 +44,7 @@
               <a href="./about.html" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="./blog.html" class="nav-link">blog</a>
+              <a href="./contact.html" class="nav-link">Contact</a>
             </li>
             <li class="nav-item">
               <a href="./pricing.html" class="nav-link">Pricing</a>
