--- a/src/html/base/footer.html
+++ b/src/html/base/footer.html
@@ -8,7 +8,7 @@
           Our highly trained reps are standing by, ready to help
         </p>
       </div>
-      <button class="footer-btn button">Try for free</button>
+      <a  href='../components/pricing/faq.html' class="footer-btn button">Try for free</a >
     </div>
     <div class="footer-body">
         <div class="footer__body-item">
