added a new page

--- a/src/html/base/header.html
+++ b/src/html/base/header.html
@@ -52,7 +52,7 @@
            
           </ul>
           <label class="header-checbox">
-            <div class="header__switcher-text">light</div>
+            <div class="header__switcher-text">Dark</div>
             <input type="checkbox" class="header-switcher" data-theme-switcher />
           </label>
         </nav>
