forgot about build 2x :)

--- a/src/about.html
+++ b/src/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <load src="./html/base/head.html" title="contact"/>
+  <load src="./html/base/head.html" title="about"/>
 
   <body data-theme="light" class="body">    
     <div class="overlay" data-burger="overlay"></div>
