--- a/src/html/base/header.html
+++ b/src/html/base/header.html
@@ -49,6 +49,12 @@
             <li class="nav-item">
               <a href="./pricing.html" class="nav-link">Pricing</a>
             </li>
+            <li class="nav-item">
+              <a href="./perform.html" class="nav-link">Performs</a>
+            </li>
+            <li class="nav-item">
+              <a href="./updates.html" class="nav-link">Updates</a>
+            </li>
            
           </ul>
           <label class="header-checbox">
