added broken slide:))

--- a/src/updates.html
+++ b/src/updates.html
@@ -5,9 +5,8 @@
   <body data-theme="light" class="body">
     <div class="overlay" data-burger="overlay"></div>
     <load src="./html/base/header.html" />
-
+    <load src="./html/components/updates/quality.html" />
     <load src="./html/base/footer.html" />
-
     <script type="module" src="./js/updates.js"></script>
   </body>
 </html>
