added last pageeeeeeee!

--- a/src/updates.html
+++ b/src/updates.html
@@ -6,6 +6,8 @@
     <div class="overlay" data-burger="overlay"></div>
     <load src="./html/base/header.html" />
     <load src="./html/components/updates/quality.html" />
+    <load src="./html/components/updates/prompt.html" />
+    <load src="./html/components/updates/articles.html" />
     <load src="./html/base/footer.html" />
     <script type="module" src="./js/updates.js"></script>
   </body>
